custom script now handles clipping of right side of text, updated due to bug in browser css clip. Also updated the styling to perform well with change in font style, size and sidebar width.

--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@
 .image_file_title {
   margin: 0;
   display: flex;
+  width: 100%;
   height: max-content;
   position: relative;
   top: 20px;
@@ -35,15 +36,11 @@
   overflow: hidden;
   white-space: pre;
   text-overflow: ellipsis;
-  max-width: 115px;
 }
 
 .image_file_title_right {
   overflow: hidden;
   white-space: pre;
-  text-overflow: clip;
-  direction: rtl;
-  max-width: 115px;
 }
 
 .image_file_preview {
